Inclusão Bootbox, funcionalidade para postar comentário em uma publicação utilizando jQuery

--- a/Blog42/Views/Home/Index.cshtml
+++ b/Blog42/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@ else // Se encontrou postagem, lista-as
                 </span>
                 <span class="subtitle">
                     <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
-                    @post.CreatedAt.ToString("HH:mm")
+                    @post.CreatedAt.ToString("HH:mm")h
                 </span>
                 <span class="subtitle">
                     <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
