Alteração na postagem do comentário, separação de scripts e view e criação de animações

--- a/Blog42/Views/Home/Index.cshtml
+++ b/Blog42/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     
     <div class="jumbotron">
         <div class="col-md-12 center">
-            <h2 class="separator b">Ooooooh no  oooouuuu!</h2>
+            <h2 class="separator b">Ooooooh noooouuuu!</h2>
             <h3 class="separator">Infelizmente ainda não temos postagens :( </h3>
         </div>    
     </div>
