--- a/Blog42/Views/Shared/_Layout.cshtml
+++ b/Blog42/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
         @Styles.Render("~/Content/custom.css")
         @Scripts.Render("~/bundles/modernizr")
         @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/jqueryui")
         @Scripts.Render("~/Scripts/bootstrap.min.js")
         @Scripts.Render("~/Scripts/bootbox.min.js")
     </head>
