--- a/Blog42/Views/Post/Delete.cshtml
+++ b/Blog42/Views/Post/Delete.cshtml
@@ -1,20 +1,72 @@
-﻿@{
-    ViewBag.Title = "Deletar Postagem";
+﻿@model Blog42.Models.PostDelete
+@{
+    // Titulo, caso formulário "Deletar Postagem", caso sucesso "Postagem Deletada"
+    ViewBag.Title = (ViewBag.Success == null) ? "Deletar Postagem" : "Postagem Deletada";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml"; // Layout para páginas do painel de controle administrativo
 }
 
-<div class="jumbotron">
+<div class="box-title">
+    <h2 class="title">@ViewBag.Title</h2>
+</div>
+<div class="content">
 
-    <!-- Titulo e Menu -->
-    @Html.Partial("_PanelTitle")
-    @Html.Partial("_PanelTabs")
+    @if (ViewBag.Success != null) // Se obteve sucesso, exibe mensagem
+    {
+        <div class="div-success">
+            <h2 class="msg-success">
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Postagem excluída com sucesso!
+            </h2><br />
+            @Html.ActionLink("Ir para listagem de Postagens", "All", "Post")
+        </div>
+    }
+    else // Senão, monta formulário
+    {
+        <h4 class="separator-only-vertical">Confirma exclusão da postagem? </h4>
 
-    <div class="tab-content">
-        <!-- Início Conteúdo da página -->
-        
-        Deletar Postagem
-        <br /><br /><br />
-        @ViewBag.Id
+        using (Html.BeginForm()) // Cria formulário
+        {
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true)
 
-        <!-- Fim Conteúdo da página -->
-    </div>
-</div><!-- /.jumbotron -->
+            @Html.HiddenFor(m => m.PostId)
+            @Html.HiddenFor(m => m.Title)
+            @Html.HiddenFor(m => m.CreatedBy)
+            @Html.HiddenFor(m => m.CreatedAt)
+
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel panel-default internal-horizontal-spacing">
+                        <label>Título:</label>
+                        <p>@Model.Title</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="panel panel-default internal-horizontal-spacing">
+                        <label>Autor:</label>
+                        <p>@Model.CreatedBy</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="panel panel-default internal-horizontal-spacing">
+                        <label>Criado em:</label>
+                        <p>@Model.CreatedAt.ToString("dd/MM/yyyy") às @Model.CreatedAt.ToString("HH:mm")h</p>
+                    </div>
+                </div>
+            </div>  
+            
+            <div class="row buttons" id="box-default">
+                <div class="col-md-4">
+                    <button type="submit" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-ok"></span> Excluir Postagem</button>
+                </div>
+                <div class="col-md-4">
+                    <button type="button" onclick="location.href='@Url.Action("Show", "Post", new { Id = Html.ValueFor(m => m.PostId) })'" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-file"></span> Ver Postagem</button>
+                </div>
+                <div class="col-md-4">
+                    <button type="button" onclick="location.href='@Url.Action("All","Post")'" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-th-list"></span> Listagem de Postagens</button>
+                </div>
+            </div>
+        }
+    }
+</div><!--/.content-->
