Renderização de html da postagem na listagem e exibição única

--- a/Blog42/Views/Home/Index.cshtml
+++ b/Blog42/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@ else // Se encontrou postagem, lista-as
                 </span>
             </div>
             <div class="content">
-                @post.Content
+                @Html.Raw(@post.Content)
             </div><!-- /.content -->
         </div><!-- /.jumbotron -->
     }
