--- a/Blog42/Views/Post/Show.cshtml
+++ b/Blog42/Views/Post/Show.cshtml
@@ -34,7 +34,7 @@
         </span>
     </div>
     <div class="content"><!-- content post-->
-        @ViewBag.Post.Content
+        @Html.Raw(ViewBag.Post.Content)
     </div><!-- /.content -->
 
     <div class="content"><!-- content comments-->
